tests/ui/byte_pool_static_pool.stderr
error[E0597]: `storage` does not live long enough
  --> tests/ui/byte_pool_static_pool.rs:12:28
   |
10 |     let mut storage = [0u8; 1024];
   |         ----------- binding `storage` declared here
11 |     let pool = core::pin::Pin::static_ref(&BYTE_POOL);
   |                -------------------------------------- assignment requires that `storage` is borrowed for `'static`
12 |     BytePool::create(pool, &mut storage, &Default::default()).unwrap();
   |                            ^^^^^^^^^^^^ borrowed value does not live long enough
13 | }
   | - `storage` dropped here while still borrowed
